updated copy + fix for iphone se text overlap

--- a/app/scss/styles.scss
+++ b/app/scss/styles.scss
@@ -33,7 +33,7 @@ a {
 .content {
   display: grid;
   grid-template-columns: repeat(16, 1fr);
-  grid-template-rows: repeat(18, minmax(96px, 7vw));
+  grid-template-rows: repeat(20, minmax(96px, 7vw));
   grid-gap: 24px;
 
   @media (max-width: 960px) {
@@ -101,7 +101,7 @@ a {
 
   @media (max-width: 960px) {
     grid-column: 2;
-    grid-row: 7;
+    grid-row: 8;
     text-align: center;
 
     h2 {
@@ -129,7 +129,7 @@ a {
   @media (max-width: 960px) {
     text-align: center;
     grid-column: 2;
-    grid-row: 18;
+    grid-row: 20;
     align-self: flex-start;
     margin: 0 auto;
 
